--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="src/three.min.js"></script>
     <script src="src/TrackballControls.js"></script>
     <script src="src/OrbitControls.js"></script>
+    <script src="src/FirstPersonControls.js"></script>
+
     
   </head>
   <body>
