--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title></title>
 
     <style>
-			body { margin: 0; }
-			canvas { width: 100% !important; height: 100% !important }
+			canvas, body, html { margin: 0; padding: 0; width: 100% !important; height: 100% !important; overflow: hidden !important; }
 		</style>
 
     <script src="src/three.min.js"></script>
